Script Changes for RTAM and FULL Sync